@@ -8,14 +8,21 @@
     <version>2.1</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>14</java.version>
-        <kotlin.version>1.4.10</kotlin.version>
-        <kotlin.compiler.apiVersion>1.4</kotlin.compiler.apiVersion>
-        <kotlin.compiler.languageVersion>1.4</kotlin.compiler.languageVersion>
-        <kotlin.ext.version>1.3.9</kotlin.ext.version>
-        <javafx.version>14.0.1</javafx.version>
+        <java.version>15</java.version>
+        <kotlin.version>1.4.21</kotlin.version>
+        <kotlin.ext.version>1.4.2</kotlin.ext.version>
+        <javafx.version>15.0.1</javafx.version>
         <common.version>1.1</common.version>
     </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>jakarta.enterprise</groupId>
+                <artifactId>jakarta.enterprise.cdi-api</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -50,12 +57,12 @@
         <dependency>
             <groupId>org.jboss</groupId>
             <artifactId>jandex</artifactId>
-            <version>2.1.1.Final</version>
+            <version>2.2.2.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-core</artifactId>
-            <version>4.0.0.Alpha2</version>
+            <version>4.0.0.Final</version>
         </dependency>
         <dependency>
             <groupId>com.github.windchopper</groupId>
@@ -83,6 +90,94 @@
             <version>${common.version}</version>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>lib</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>2.8</version>
+                        <executions>
+                            <execution>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>win</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <copy todir="${project.build.directory}/lib">
+                                            <fileset dir="${project.build.directory}" includes="*.jar"/>
+                                        </copy>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <executable>${java.home}/bin/jpackage</executable>
+                                    <environmentVariables>
+                                        <PATH>C:\wix</PATH>
+                                    </environmentVariables>
+                                    <commandlineArgs>
+                                        --icon ${project.basedir}/src/main/windows/Show-All-Views-50.ico
+                                        --app-version ${project.version}
+                                        --name process-browser
+                                        --license-file ${project.basedir}/LICENSE
+                                        --vendor com.github.windchopper
+                                        --input ${project.build.directory}/lib
+                                        --dest ${project.build.directory}
+                                        --main-jar ${project.artifactId}-${project.version}.${project.packaging}
+                                        --main-class com.github.windchopper.tools.process.browser.Application
+                                        --java-options "--module-path $APPDIR"
+                                        --java-options "--add-modules javafx.controls,javafx.graphics,javafx.fxml"
+                                        --win-dir-chooser
+                                        --win-menu
+                                    </commandlineArgs>
+                                    <!--один хер в установленном уже приложении надо редактировать app/*.cfg,
+                                        чтобы удалить лишний параметр module-path-->
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
@@ -99,6 +194,7 @@
                 <executions>
                     <execution>
                         <id>compile</id>
+                        <!--suppress KotlinMavenPluginPhase-->
                         <phase>compile</phase>
                         <goals>
                             <goal>compile</goal>
@@ -135,34 +231,11 @@
                             <goal>compile</goal>
                         </goals>
                     </execution>
-                    <execution>
-                        <id>testCompile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
                 </executions>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.8</version>
-                <executions>
-                    <execution>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
